--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
 		<title>{% block subpage_title %}{% endblock %}</title>
 	</head>
 	<body>
-
+		<div class="content">
+			{% block content %}{% endblock %}
+		</div>
 	</body>
 </html>
