base of website templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,11 @@
 		<title>{% block subpage_title %}{% endblock %}</title>
 	</head>
 	<body>
+		<div class="header">
+			<div class="header-1">
+
+			</div>
+		</div>
 		<div class="content">
 			{% block content %}{% endblock %}
 		</div>
