--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,13 @@
 		<html lang="{{ LANGUAGE_CODE }}">
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="{% static "style/css/style.css" %}">
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Drois+Sans">
 		<title>{% block subpage_title %}{% endblock %}</title>
 	</head>
 	<body>
 		<div class="header">
 			<div class="header-1">
-
+				<h1>Test title</h1>
 			</div>
 		</div>
 		<div class="content">
