--- a/website/static/style/css/style.css
+++ b/website/static/style/css/style.css
@@ -6,5 +6,10 @@
   width: 100%;
   height: 50px;
   background-color: #000; }
+  .header-1 h1 {
+    color: #fff;
+    font-family: "Droid Sans";
+    text-align: center;
+    font-size: 14px; }
 
 /*# sourceMappingURL=style.css.map */
