--- a/website/static/style/sass/style.sass
+++ b/website/static/style/sass/style.sass
@@ -6,3 +6,9 @@
 	width: 	100%
 	height: 50px
 	background-color: #000
+
+	h1
+		color: #fff
+		font-family: "Droid Sans"
+		text-align: center
+		font-size: 14px
