--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,10 @@
 	<body>
 		<div class="header">
 			<div class="header-1">
-				<h1>Test title</h1>
+				<div class="header-1-title-wrapper">
+					<p>Test title</p>
+					<hr>
+				</div>
 			</div>
 		</div>
 		<div class="content">
