--- a/website/static/style/css/style.css
+++ b/website/static/style/css/style.css
@@ -6,10 +6,21 @@
   width: 100%;
   height: 50px;
   background-color: #000; }
-  .header-1 h1 {
-    color: #fff;
-    font-family: "Droid Sans";
-    text-align: center;
-    font-size: 14px; }
+  .header-1 .header-1-title-wrapper {
+    width: 500px;
+    margin: auto; }
+    .header-1 .header-1-title-wrapper p {
+      color: #fff;
+      font-family: "Droid Sans";
+      text-align: center;
+      font-size: 13px;
+      padding-top: 10px; }
+    .header-1 .header-1-title-wrapper hr {
+      height: 3px;
+      width: 400px;
+      background-color: #555;
+      border: 0;
+      margin: auto;
+      margin-top: 4px; }
 
 /*# sourceMappingURL=style.css.map */
