--- a/website/static/style/sass/style.sass
+++ b/website/static/style/sass/style.sass
@@ -7,8 +7,21 @@
 	height: 50px
 	background-color: #000
 
-	h1
-		color: #fff
-		font-family: "Droid Sans"
-		text-align: center
-		font-size: 14px
+	.header-1-title-wrapper
+		width: 500px
+		margin: auto
+
+		p
+			color: #fff
+			font-family: "Droid Sans"
+			text-align: center
+			font-size: 13px
+			padding-top: 10px
+
+		hr
+			height: 3px
+			width: 400px
+			background-color: #555
+			border: 0
+			margin: auto
+			margin-top: 4px
