--- a/templates/edupanel/login.html
+++ b/templates/edupanel/login.html
@@ -7,7 +7,7 @@
 		{% get_current_language as LANGUAGE_CODE %}
 		<meta charset="UTF-8">
 		<html lang="{{ LANGUAGE_CODE }}">
-		<link rel="stylesheet" type="text/css" href="{% static "style/css/style.css" %}">
+		<link rel="stylesheet" type="text/css" href="{% static "style/css/login.css" %}">
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Drois+Sans">
 		<title>EduPanel - Log in</title>
 	</head>
