--- a/EduPanel/static/style/sass/login.sass
+++ b/EduPanel/static/style/sass/login.sass
@@ -3,9 +3,24 @@
 	padding: 0
 
 body
-	background-color: #fff
+	background-color: #3C3D67
+	font-family: "Droid Sans"
+	color: #555
 
 .login-wrapper
-	width: 500px
-	height: 300px
+	width: 400px
+	height: 200px
 	margin: auto
+	margin-top: 200px
+	border: 0px
+	background-color: #fff
+
+	border-radius: 			10px
+	-moz-border-radius: 	10px
+	-o-border-radius:   	10px
+	-webkit-border-radius:	10px
+
+	h1
+		font-size: 16px
+		padding-top: 10px
+		margin-left: 20px
