--- a/templates/edupanel/login.html
+++ b/templates/edupanel/login.html
@@ -15,5 +15,6 @@
 		<div class="login-wrapper">
 			<h1>{% trans "Login" %}</h1>
 		</div>
+		<div class="login-wrapper-shadow"></div>
 	</body>
 </html>
