--- a/EduPanel/static/style/css/login.css
+++ b/EduPanel/static/style/css/login.css
@@ -14,6 +14,8 @@ body {
   margin-top: 200px;
   border: 0px;
   background-color: #fff;
+  z-index: 10;
+  position: relative;
   border-radius: 10px;
   -moz-border-radius: 10px;
   -o-border-radius: 10px;
@@ -22,5 +24,20 @@ body {
     font-size: 16px;
     padding-top: 10px;
     margin-left: 20px; }
+
+.login-wrapper-shadow {
+  margin: auto;
+  position: relative;
+  margin-top: -19px;
+  z-index: -1;
+  width: 400px;
+  height: 16px;
+  background: #fff;
+  border-radius: 290px/8px;
+  -moz-border-radius: 290px/8px;
+  -webkit-border-radius: 290px/8px;
+  box-shadow: 0 10px 20px #000;
+  -moz-box-shadow: 0 10px 20px #000;
+  -webkit-box-shadow: 0 10px 20px #000; }
 
 /*# sourceMappingURL=login.css.map */
