--- a/templates/edupanel/login.html
+++ b/templates/edupanel/login.html
@@ -9,11 +9,21 @@
 		<html lang="{{ LANGUAGE_CODE }}">
 		<link rel="stylesheet" type="text/css" href="{% static "style/css/login.css" %}">
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Drois+Sans">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<title>EduPanel - Log in</title>
 	</head>
 	<body>
 		<div class="login-wrapper">
 			<h1>{% trans "Login" %}</h1>
+			<div class="login">
+				<form method="POST" action="#">
+					{% csrf_token %}
+					<div class="login-input-wrapper">
+						<div class="icon-wrapper"><i class="fa fa-envelope"></i></div>
+						<input type="text" name="login-input">
+					</div>
+				</form>
+			</div>
 		</div>
 		<div class="login-wrapper-shadow"></div>
 	</body>
