--- a/EduPanel/static/style/sass/login.sass
+++ b/EduPanel/static/style/sass/login.sass
@@ -1,3 +1,29 @@
+=border-radius($radius)
+	-webkit-border-radius: 	$radius
+	-o-border-radius:		$radius
+	-moz-border-radius:		$radius
+	border-radius: 			$radius
+
+=border-left-radius($radius)
+	border-top-left-radius: 			$radius
+	border-bottom-left-radius: 			$radius
+	-moz-border-top-left-radius: 		$radius
+	-moz-border-bottom-left-radius: 	$radius
+	-webkit-border-top-left-radius: 	$radius
+	-webkit-border-bottom-left-radius: 	$radius
+	-o-border-top-left-radius: 			$radius
+	-o-border-bottom-left-radius: 		$radius
+
+=border-right-radius($radius)
+	border-top-right-radius: 			$radius
+	border-bottom-right-radius: 		$radius
+	-moz-border-top-right-radius: 		$radius
+	-moz-border-bottom-right-radius: 	$radius
+	-webkit-border-top-right-radius: 	$radius
+	-webkit-border-bottom-right-radius: $radius
+	-o-border-top-right-radius: 		$radius
+	-o-border-bottom-right-radius: 		$radius
+
 *
 	margin:  0
 	padding: 0
@@ -14,30 +40,58 @@ body
 	margin-top: 200px
 	border: 0px
 	background-color: #fff
-	z-index: 10
-	position: relative
-
-	border-radius: 			10px
-	-moz-border-radius: 	10px
-	-o-border-radius:   	10px
-	-webkit-border-radius:	10px
+	+border-radius(10px)
 
 	h1
 		font-size: 16px
 		padding-top: 10px
 		margin-left: 20px
 
+.login-input-wrapper
+	margin: auto
+	margin-top: 40px
+	width: 250px
+
+	.icon-wrapper
+		width: 40px
+		height: 25px
+		background-color: #ddd
+		border: 1px solid #aaa
+		float: left
+		+border-left-radius(5px)
+
+		i
+			text-align: center
+			width: 100%
+			line-height: 22px
+
+	input
+		width: 180px
+		float: left
+		border: 1px solid #aaa
+		border-left: 0px
+		height: 15px
+		background-color: #fff
+		+border-right-radius(5px)
+		color: #555
+
+		padding-top: 5px
+		padding-bottom: 5px
+		padding-left: 10px
+		padding-right: 10px
+
+
 .login-wrapper-shadow
 	margin: auto
 	position: relative
-	margin-top: -19px
+	margin-top: -25px
 	z-index: -1
 	width: 400px
 	height: 16px
 	background: #fff
-	border-radius: 290px / 8px
-	-moz-border-radius: 290px / 8px
-	-webkit-border-radius: 290px / 8px
-	box-shadow: 0 10px 20px #000
-	-moz-box-shadow: 0 10px 20px #000
+	+border-radius(290px / 8px)
+
+	box-shadow: 		0 10px 20px #000
+	-moz-box-shadow: 	0 10px 20px #000
 	-webkit-box-shadow: 0 10px 20px #000
+	-o-box-shadow:      0 10px 20px #000
