--- a/EduPanel/static/style/sass/login.sass
+++ b/EduPanel/static/style/sass/login.sass
@@ -34,7 +34,7 @@ body
 	color: #555
 
 .login-wrapper
-	width: 400px
+	width: 350px
 	height: 200px
 	margin: auto
 	margin-top: 200px
@@ -47,9 +47,13 @@ body
 		padding-top: 10px
 		margin-left: 20px
 
+.login
+	width: 300px
+	margin: auto
+	margin-top: 30px
+
 .login-input-wrapper
 	margin: auto
-	margin-top: 40px
 	width: 250px
 
 	.icon-wrapper
@@ -81,12 +85,45 @@ body
 		padding-right: 10px
 
 
+.separator
+	clear: both
+	padding-top: 1.5px
+	padding-bottom: 1.5px
+
+.forgot-psswd
+	font-size: 12px
+	margin-top: 10px
+	text-align: center
+
+	a
+		color: #878787
+		text-decoration: none
+
+.sign-in-wrapper
+	width: 100px
+	margin: auto
+	margin-top: 20px
+
+	p
+		font-size: 14px
+		font-weight: bold
+		text-align: center
+		cursor: pointer
+
+	hr
+		width: 0px
+		height: 3px
+		background-color: #1ea3eb
+		border: 0
+		margin: auto
+		margin-top: 2px
+
 .login-wrapper-shadow
 	margin: auto
 	position: relative
 	margin-top: -25px
 	z-index: -1
-	width: 400px
+	width: 350px
 	height: 16px
 	background: #fff
 	+border-radius(290px / 8px)
