--- a/templates/edupanel/login.html
+++ b/templates/edupanel/login.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Drois+Sans">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<title>EduPanel - Log in</title>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="{% static "scripts/js/login.js" %}"></script>
 	</head>
 	<body>
 		<div class="login-wrapper">
@@ -20,9 +22,20 @@
 					{% csrf_token %}
 					<div class="login-input-wrapper">
 						<div class="icon-wrapper"><i class="fa fa-envelope"></i></div>
-						<input type="text" name="login-input">
+						<input type="text" name="login">
+					</div>
+					<div class="separator"></div>
+					<div class="login-input-wrapper">
+						<div class="icon-wrapper"><i class="fa fa-lock"></i></div>
+						<input type="password" name="password">
 					</div>
 				</form>
+				<div class="separator"></div>
+				<p class="forgot-psswd"><a href="#">{% trans "I forgot my password" %}</a></p>
+				<div class="sign-in-wrapper">
+					<p>{% trans "Sign In" %}</p>
+					<hr>
+				</div>
 			</div>
 		</div>
 		<div class="login-wrapper-shadow"></div>
