--- a/templates/edupanel/login.html
+++ b/templates/edupanel/login.html
@@ -21,12 +21,12 @@
 				<form method="POST" action="#">
 					{% csrf_token %}
 					<div class="login-input-wrapper">
-						<div class="icon-wrapper"><i class="fa fa-envelope"></i></div>
+						<div class="icon-wrapper" name="login"><i class="fa fa-envelope"></i></div>
 						<input type="text" name="login">
 					</div>
 					<div class="separator"></div>
 					<div class="login-input-wrapper">
-						<div class="icon-wrapper"><i class="fa fa-lock"></i></div>
+						<div class="icon-wrapper" name="password"><i class="fa fa-lock"></i></div>
 						<input type="password" name="password">
 					</div>
 				</form>
